[gd_scene load_steps=6 format=3 uid="uid://c6ou5w1rw8dx4"]

[ext_resource type="Script" uid="uid://mdeemfm670kr" path="res://addons/GRest/scripts/grest_panel.gd" id="1_ucnfc"]
[ext_resource type="Script" uid="uid://bt55whfd7pd61" path="res://addons/GRest/scripts/cont_principal.gd" id="2_7kvpr"]
[ext_resource type="Script" uid="uid://de6u2pf7wwf4" path="res://addons/GRest/scripts/ui.gd" id="2_sj1ls"]
[ext_resource type="Script" uid="uid://dsu1aoq248knv" path="res://addons/GRest/scripts/panel_rest.gd" id="3_kqeb0"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_sj1ls"]
number_color = Color(0.537255, 0, 0, 1)
symbol_color = Color(0, 0.686275, 0, 1)
function_color = Color(0, 0, 0.509804, 1)

[node name="GrestPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
script = ExtResource("1_ucnfc")
metadata/_edit_use_anchors_ = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchor_top = -0.194
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 125.712
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_sj1ls")
metadata/_edit_use_anchors_ = true

[node name="Fondo" type="ColorRect" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitR" type="HSplitContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 100

[node name="Panel" type="Panel" parent="UI/HSplitR"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HSplitR/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 87.0
grow_horizontal = 2

[node name="Label" type="Label" parent="UI/HSplitR/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "GRest"

[node name="Button" type="Button" parent="UI/HSplitR/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "New Request"

[node name="ItemList" type="ItemList" parent="UI/HSplitR/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 136.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(220, 43)
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="HSplitL" type="HSplitContainer" parent="UI/HSplitR"]
layout_mode = 2
split_offset = 650
drag_area_offset = -9
metadata/_edit_use_anchors_ = true

[node name="ContPrincipal" type="VBoxContainer" parent="UI/HSplitR/HSplitL"]
layout_mode = 2
script = ExtResource("2_7kvpr")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal"]
layout_mode = 2

[node name="MethdOption" type="OptionButton" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "GET"
popup/item_0/id = 0
popup/item_1/text = "POST"
popup/item_1/id = 1
popup/item_2/text = "PUT"
popup/item_2/id = 2
popup/item_3/text = "DELETE"
popup/item_3/id = 3

[node name="LineEdit" type="LineEdit" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "https://www.example.com/welcome"

[node name="BtnSend" type="Button" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer"]
layout_mode = 2
text = "SEND"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
current_tab = 1

[node name="Quey" type="TabBar" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Control" type="Control" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Quey"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 582.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Quey/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Quey/Control/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Quey/Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Quey/Control/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Query parameters"

[node name="Parametro1" type="HBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Quey/Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxParam1" type="HBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Quey/Control/Panel/VBoxContainer/Parametro1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Quey/Control/Panel/VBoxContainer/Parametro1/HBoxParam1"]
layout_mode = 2

[node name="LineParamP1" type="LineEdit" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Quey/Control/Panel/VBoxContainer/Parametro1/HBoxParam1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxParam1_1" type="HBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Quey/Control/Panel/VBoxContainer/Parametro1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineParamP2" type="LineEdit" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Quey/Control/Panel/VBoxContainer/Parametro1/HBoxParam1_1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Headers" type="TabBar" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="Control" type="Control" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 582.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "HTTP Headers"

[node name="CheckBox" type="CheckBox" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Row"

[node name="Parametro1" type="HBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro1/HBoxContainer"]
layout_mode = 2
button_pressed = true

[node name="LineEdit" type="LineEdit" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro1/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "*/*"

[node name="Parametro2" type="HBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro2/HBoxContainer"]
layout_mode = 2
button_pressed = true
flat = true

[node name="LineEdit" type="LineEdit" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Content-Type"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "application/json"

[node name="Body" type="TabBar" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Control" type="Control" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Body"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 582.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Body/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Body/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Body/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "JSON CONTENT"

[node name="CodeEdit" type="CodeEdit" parent="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Body/Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
highlight_current_line = true
draw_tabs = true
gutters_draw_line_numbers = true

[node name="PanelRest" type="Panel" parent="UI/HSplitR/HSplitL"]
layout_mode = 2
script = ExtResource("3_kqeb0")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HSplitR/HSplitL/PanelRest"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxStatus" type="HBoxContainer" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="LblStatus" type="Label" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer/HBoxContainer/HBoxStatus"]
layout_mode = 2
text = "Status: "

[node name="LblStatusR" type="Label" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer/HBoxContainer/HBoxStatus"]
layout_mode = 2

[node name="HBoxSize" type="HBoxContainer" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="LblSize" type="Label" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer/HBoxContainer/HBoxSize"]
layout_mode = 2
text = "Size: "

[node name="LblSizeR" type="Label" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer/HBoxContainer/HBoxSize"]
layout_mode = 2

[node name="HBoxTime" type="HBoxContainer" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="LblTime" type="Label" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer/HBoxContainer/HBoxTime"]
layout_mode = 2
text = "Time: "

[node name="LblTimeR" type="Label" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer/HBoxContainer/HBoxTime"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
current_tab = 1

[node name="Response" type="TabBar" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="CodeEdit" type="CodeEdit" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer/TabContainer/Response"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.0
offset_bottom = 586.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
syntax_highlighter = SubResource("CodeHighlighter_sj1ls")
highlight_current_line = true
draw_tabs = true
gutters_draw_line_numbers = true

[node name="Headers" type="TabBar" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="ItemList" type="ItemList" parent="UI/HSplitR/HSplitL/PanelRest/VBoxContainer/TabContainer/Headers"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 590.0
grow_horizontal = 2
grow_vertical = 2
max_text_lines = 10
max_columns = 2
metadata/_edit_use_anchors_ = true

[connection signal="request_completed" from="HTTPRequest" to="UI/HSplitR/HSplitL/PanelRest" method="_on_http_request_request_completed"]
[connection signal="dragged" from="UI/HSplitR" to="UI" method="_on_h_split_r_dragged"]
[connection signal="dragged" from="UI/HSplitR/HSplitL" to="UI" method="_on_h_split_l_dragged"]
[connection signal="pressed" from="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer/BtnSend" to="." method="_on_btn_send_pressed"]
[connection signal="text_changed" from="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Quey/Control/Panel/VBoxContainer/Parametro1/HBoxParam1/LineParamP1" to="UI/HSplitR/HSplitL/ContPrincipal" method="_on_line_param_p_1_text_changed"]
[connection signal="text_changed" from="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Quey/Control/Panel/VBoxContainer/Parametro1/HBoxParam1_1/LineParamP2" to="UI/HSplitR/HSplitL/ContPrincipal" method="_on_line_param_p_2_text_changed"]
[connection signal="pressed" from="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro1/HBoxContainer/CheckBox" to="." method="_on_check_box_pressed"]
[connection signal="text_changed" from="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro1/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro1/HBoxContainer2/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro2/HBoxContainer/CheckBox" to="." method="_on_check_box_pressed"]
[connection signal="text_changed" from="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro2/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="UI/HSplitR/HSplitL/ContPrincipal/HBoxContainer2/TabContainer/Headers/Control/Panel/VBoxContainer/Parametro2/HBoxContainer2/LineEdit" to="." method="_on_line_edit_text_changed"]
